--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -20,7 +20,20 @@
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/27/n13193107.md#1" target="_blank">【百年真相】凄惨绝望的岁月 傅雷最后的日子</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/27/n13193107.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13193191-ttl7dayn1g________-1200x800-1___-150x120.png" align ="left"></a>欢迎来到《百年真相》节目。今天让我们走近中国著名翻译家傅雷，一起回顾他最后走过的那段绝望、凄凉的岁月。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 1:42 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200822.md#1" target="_blank">诗歌：黄昏的秋</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200822.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/04/lake-e1489807813556-150x120.jpg" align ="left"></a>天高一片霞 夕照湖堤沙 坐听波浪语 秋风过万家......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 1:04 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200805.md#1" target="_blank">不再焦虑的深层教养：培养慈悲心</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200805.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13107016-Snap2-150x120.jpg" align ="left"></a>一些冥想呼吸练习会真正改变你跟孩子的关系，这绝对是阅读做不到的事情。我曾经连续两个礼拜，每天都练习慈心静观，结果发现我生活每个层面都棒极了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:55 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200647.md#1" target="_blank">歌词：梅</a><br></h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200647.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13176698-pink-4053093_640-150x120.jpg" align ="left"></a> 雪中千朵奇葩，披挂冰盔亮银甲。 平添七分高洁，掩去娇颜三分红霞。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:01 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208787.md#1" target="_blank">菩萨蛮?秋韵</a><br></h3>槭披密羽层层聚，秋将火炬高高举。
+一叶已先红，燎原势必中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月04日 12:16 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13208767.md#1" target="_blank">七律：入山</a><br></h3>
+深山一入乾坤阔，
+思绪随风四野流。
+仰望蓝天无限意，
+俯怡黄菊炫明秋。
+水湍水缓纯真趣，
+云卷云舒自在游。
+琐事无非虚幻里，
+红尘何必太多求？@*
+ 
+
+责任编辑：林芳宇......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月04日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/9/3/n13206840.md#1" target="_blank">松街的故事之三：从一张青岛女中1935年的老照片谈起</a><br></h3>前几个月，母亲生前挚友陆素影的孙辈，自大陆寄来一张当年青岛女中游泳队的老照片，这是我手中现存，年代最久远的母亲之照片（应该是摄于1935年左右）。
 
 照片的品质不佳，初见之下，我无从确认那一位是我母亲。好在我那已年逾九旬，母亲之同母异父的幼妹刘平梅尚在北京（梅姨与姨爹俩，都是清华大学的退休教授），经她老人家指认，我.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月03日 9:51 AM			</td></tr>
@@ -39,6 +52,5 @@
 惊蛰梦，梦听雷。
 炎炎夏日，多雨多雷。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 9:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/25/n13187194.md#1" target="_blank">麦立：缘</a><br></h3>嗨 你好 高兴遇见你 我也是 你是谁 你是谁  是谁   不重要 重要是 我要记住这一刻......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/21/8/31/n13200689.md#1" target="_blank">蝶恋花?快寻真相觅良方</a><br></h3>一叶知秋秋已到，夜晚寒凉，不再蝉声噪。 冷雨不时来报道，大灾持续无依靠。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月01日 12:10 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zeqdou3554/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/zeqdou3554/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zeqdou3554/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/zeqdou3554/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
